# pallet-packing

./: .gitignore  NFD_SA.py  SA + NFD.cpp  SA + o-tree dec.cpp  SA+NFD(with drawing).cpp  algorithm_comparison.ipynb  algorithm_tests.ipynb  algorithm_wrappers.py  build.py  c_interop.py  common.py  continuous.py  gradio_demo.ipynb  mass_demo.ipynb  metrics.py  o-tree.cpp  ortools_models.py  plots.py  problem_io.py  requirements.txt  skyline.py  structures.py  yuskov.ipynb
concat_baseline/: concat_baseline.py  concat_example.ipynb
cpp/: CMakeLists.txt  NFD.cpp  NFD.h  SA + NFD.cpp  SA+NFD(with drawing).cpp  annealing.hpp  common.h  library.cpp  library.h  main.cpp  o-tree.cpp  o-tree.h  permutation_encoding.cpp  permutation_encoding.hpp  side_fucnctions.cpp  side_fucnctions.h  simulated_annealing.cpp  simulated_annealing.h  skyline.cpp  skyline.hpp
data/: mass_formatted.csv  result_10.csv  result_100.csv  result_20.csv  result_50.csv  results.csv  results_mass.csv  results_relative.csv  times.csv  times_mass.csv
data/random/: guillotine_equal_100_0.txt  guillotine_equal_10_0.txt  guillotine_equal_20_0.txt  guillotine_equal_50_0.txt  guillotine_max_100_0.txt  guillotine_max_10_0.txt  guillotine_max_20_0.txt  guillotine_max_50_0.txt  guillotine_rand_100_0.txt  guillotine_rand_10_0.txt  guillotine_rand_20_0.txt  guillotine_rand_50_0.txt  random_100_0.txt  random_100_1.txt  random_10_0.txt  random_10_1.txt  random_20_0.txt  random_20_1.txt  random_50_0.txt  random_50_1.txt
data/random_mass/: guillotine_equal_100_0.txt  guillotine_equal_10_0-1.csv  guillotine_equal_10_0.txt  guillotine_equal_20_0.txt  guillotine_equal_50_0-1.csv  guillotine_equal_50_0.txt  guillotine_max_100_0.txt  guillotine_max_10_0-1.csv  guillotine_max_10_0.txt  random_100_0.txt  (+21 more)
data_analys/: data_analys.ipynb  data_generator.py  draw_utils.py
